--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,12 @@ dependencies:
   flutter_bloc: ^8.1.6
   freezed_annotation: ^2.4.1
   dartz: ^0.10.1
+  printing: ^5.9.1
   json_annotation: ^4.9.0
   
   dio: ^5.4.3+1
   equatable: ^2.0.5
-  flutter_launcher_icons: ^0.13.1
+  
   shared_preferences: ^2.2.3
   http: ^1.2.1
   bloc:
@@ -56,6 +57,9 @@ dev_dependencies:
     sdk: flutter
   build_runner:
   json_serializable:  
+  
+  
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
